[package]
name = "cargo-example"
version = "0.1.0"
edition = "2021"

authors = ["elbaro <elbaro@users.noreply.github.com>"]
repository = "https://github.com/elbaro/cargo-example"
license = "MIT"
keywords = ["cargo", "example"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
clap = { version = "4.3.2", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
log = "0.4.18"
pretty_env_logger = "0.5.0"
