[package]
name = "cargo-example2"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["elbaro <elbaro@users.noreply.github.com>"]
repository = "https://github.com/elbaro/cargo-example"
keywords = ["cargo", "example"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "cargo run --example without git cloning"

[[bin]]
name = "cargo-example"
path = "src/main.rs"

[dependencies]
ahash = "0.8.3"
clap = { version = "4.3.2", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
log = "0.4.18"
pretty_env_logger = "0.5.0"
